// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IfSearch should not render children without context 1`] = `
<div>
  <span>
    I must not fear.
  </span>
  <IfSearch />
</div>
`;

exports[`IfSearch should not render children without search context 1`] = `
Array [
  <span>
    I must not fear.
  </span>,
  <IfSearch />,
]
`;

exports[`IfSearch should render children with search context 1`] = `
Array [
  <span>
    I must not fear.
  </span>,
  <IfSearch>
    <span>
      Fear is the mind-killer.
    </span>
  </IfSearch>,
]
`;
